@@ -51,14 +51,20 @@ public:
     [[nodiscard]] const Spawn& getBestSpawn() const noexcept;
 
 private:
-    void handlePlayer(Entity& thing, std::size_t id, const float dt);
+    void handlePlayer(Entity& thing, const EntityIndexType idx, const float dt);
 
-    void handleDeadPlayer(MarkerDeadPlayer& thing, const std::size_t id);
+    void
+    handleDeadPlayer(MarkerDeadPlayer& thing, const MarkerIndexType markerIdx);
 
     void handleItemRespawner(
         MarkerItemRespawner& thing,
-        const std::size_t idx,
+        const MarkerIndexType markerIdx,
         const float deltaTime);
+
+    void handleDamageOverTime(
+        MarkerDamageOverTime& marker,
+        const MarkerIndexType markerIdx,
+        const float dt);
 
     void handleGrabbedPickable(
         Entity& entity,
@@ -88,7 +94,7 @@ private:
 
     void damage(
         Entity& thing,
-        std::size_t thingIndex,
+        EntityIndexType thingIndex,
         int damage,
         PlayerStateIndexType originatorStateIdx);
 
@@ -101,7 +107,9 @@ private:
                    });
     }
 
-    void removeEntity(std::size_t index);
+    void removeEntity(EntityIndexType index);
+
+    void removeMarker(MarkerIndexType index);
 
 private: // Scripts API
     void firePellets(
@@ -137,5 +145,6 @@ private:
     mem::Rc<EventQueue> eventQueue;
     std::vector<std::string> playerNames;
     Hitscanner hitscanner;
-    std::vector<EntityIndexType> indicesToRemove;
+    std::vector<EntityIndexType> entityIndicesToRemove;
+    std::vector<MarkerIndexType> markerIndicesToRemove;
 };
